==> tetrafolium/micropython/ports/esp32/machine_pin.c <==
#include <stdio.h>
#include <string.h>
#include "driver/gpio.h"
#include "extmod/virtpin.h"
#include "machine_rtc.h"
#include "modesp32.h"
#include "modmachine.h"
#include "mphalport.h"
#include "py/mphal.h"
#include "py/runtime.h"
#define GPIO_PULL_DOWN (1)
#define GPIO_PULL_UP (2)
#define GPIO_PULL_HOLD (4)

STATIC mp_obj_t machine_pin_obj_init_helper(const machine_pin_obj_t *self,
                                            size_t n_args,
                                            const mp_obj_t *pos_args,
                                            mp_map_t *kw_args) {
  enum { ARG_mode, ARG_pull, ARG_value };
  static const mp_arg_t allowed_args[] = {
      {MP_QSTR_mode, MP_ARG_OBJ, {.u_obj = mp_const_none}},
      {MP_QSTR_pull, MP_ARG_OBJ, {.u_obj = MP_OBJ_NEW_SMALL_INT(-1)}},
      {MP_QSTR_value, MP_ARG_KW_ONLY | MP_ARG_OBJ, {.u_obj = MP_OBJ_NULL}},
  };

  // parse args
  mp_arg_val_t args[MP_ARRAY_SIZE(allowed_args)];
  mp_arg_parse_all(n_args, pos_args, kw_args, MP_ARRAY_SIZE(allowed_args),
                   allowed_args, args);

  // reset the pin first if this is a mode-setting init (grab it back from ADC)
  if (args[ARG_mode].u_obj != mp_const_none) {
    gpio_reset_pin(self->id);
  }

  // configure the pin for gpio
  gpio_pad_select_gpio(self->id);

  // set initial value (do this before configuring mode/pull)
  if (args[ARG_value].u_obj != MP_OBJ_NULL) {
    gpio_set_level(self->id, mp_obj_is_true(args[ARG_value].u_obj));
  }

  // configure mode
  if (args[ARG_mode].u_obj != mp_const_none) {
    mp_int_t pin_io_mode = mp_obj_get_int(args[ARG_mode].u_obj);
    if (self->id >= 34 && (pin_io_mode & GPIO_MODE_DEF_OUTPUT)) {
      mp_raise_ValueError(MP_ERROR_TEXT("pin can only be input"));
    } else {
      gpio_set_direction(self->id, pin_io_mode);
    }
  }

  // configure pull
  if (args[ARG_pull].u_obj != MP_OBJ_NEW_SMALL_INT(-1)) {
    int mode = 0;
    if (args[ARG_pull].u_obj != mp_const_none) {
      mode = mp_obj_get_int(args[ARG_pull].u_obj);
    }
    if (mode & GPIO_PULL_DOWN) {
      gpio_pulldown_en(self->id);
    } else {
      gpio_pulldown_dis(self->id);
    }
    if (mode & GPIO_PULL_UP) {
      gpio_pullup_en(self->id);
    } else {
      gpio_pullup_dis(self->id);
    }
    if (mode & GPIO_PULL_HOLD) {
      gpio_hold_en(self->id);
    } else if (GPIO_IS_VALID_OUTPUT_GPIO(self->id)) {
      gpio_hold_dis(self->id);
    }
  }

  return mp_const_none;
}

STATIC mp_obj_t machine_pin_call(mp_obj_t self_in, size_t n_args, size_t n_kw,
                                 const mp_obj_t *args) {
  mp_arg_check_num(n_args, n_kw, 0, 1, false);
  machine_pin_obj_t *self = self_in;
  if (n_args == 0) {
    // get pin
    return MP_OBJ_NEW_SMALL_INT(gpio_get_level(self->id));
  } else {
    // set pin
    gpio_set_level(self->id, mp_obj_is_true(args[0]));
    return mp_const_none;
  }
}

STATIC mp_obj_t machine_pin_off(mp_obj_t self_in) {
  machine_pin_obj_t *self = MP_OBJ_TO_PTR(self_in);
  gpio_set_level(self->id, 0);
  return mp_const_none;
}

STATIC mp_obj_t machine_pin_on(mp_obj_t self_in) {
  machine_pin_obj_t *self = MP_OBJ_TO_PTR(self_in);
  gpio_set_level(self->id, 1);
  return mp_const_none;
}

STATIC mp_obj_t machine_pin_irq(size_t n_args, const mp_obj_t *pos_args,
                                mp_map_t *kw_args) {
  enum { ARG_handler, ARG_trigger, ARG_wake };
  static const mp_arg_t allowed_args[] = {
      {MP_QSTR_handler, MP_ARG_OBJ, {.u_obj = mp_const_none}},
      {MP_QSTR_trigger,
       MP_ARG_INT,
       {.u_int = GPIO_PIN_INTR_POSEDGE | GPIO_PIN_INTR_NEGEDGE}},
      {MP_QSTR_wake, MP_ARG_OBJ, {.u_obj = mp_const_none}},
  };
  machine_pin_obj_t *self = MP_OBJ_TO_PTR(pos_args[0]);
  mp_arg_val_t args[MP_ARRAY_SIZE(allowed_args)];
  mp_arg_parse_all(n_args - 1, pos_args + 1, kw_args,
                   MP_ARRAY_SIZE(allowed_args), allowed_args, args);

  if (n_args > 1 || kw_args->used != 0) {
    // configure irq
    mp_obj_t handler = args[ARG_handler].u_obj;
    uint32_t trigger = args[ARG_trigger].u_int;
    mp_obj_t wake_obj = args[ARG_wake].u_obj;

    if ((trigger == GPIO_PIN_INTR_LOLEVEL ||
         trigger == GPIO_PIN_INTR_HILEVEL) &&
        wake_obj != mp_const_none) {
      mp_int_t wake;
      if (mp_obj_get_int_maybe(wake_obj, &wake)) {
        if (wake < 2 || wake > 7) {
          mp_raise_ValueError(MP_ERROR_TEXT("bad wake value"));
        }
      } else {
        mp_raise_ValueError(MP_ERROR_TEXT("bad wake value"));
      }

      if (machine_rtc_config.wake_on_touch) { // not compatible
        mp_raise_ValueError(MP_ERROR_TEXT("no resources"));
      }

      if (!RTC_IS_VALID_EXT_PIN(self->id)) {
        mp_raise_ValueError(MP_ERROR_TEXT("invalid pin for wake"));
      }

      if (machine_rtc_config.ext0_pin == -1) {
        machine_rtc_config.ext0_pin = self->id;
      } else if (machine_rtc_config.ext0_pin != self->id) {
        mp_raise_ValueError(MP_ERROR_TEXT("no resources"));
      }

      machine_rtc_config.ext0_level = trigger == GPIO_PIN_INTR_LOLEVEL ? 0 : 1;
      machine_rtc_config.ext0_wake_types = wake;
    } else {
      if (machine_rtc_config.ext0_pin == self->id) {
        machine_rtc_config.ext0_pin = -1;
      }

      if (handler == mp_const_none) {
        handler = MP_OBJ_NULL;
        trigger = 0;
      }
      gpio_isr_handler_remove(self->id);
      MP_STATE_PORT(machine_pin_irq_handler)[self->id] = handler;
      gpio_set_intr_type(self->id, trigger);
      gpio_isr_handler_add(self->id, machine_pin_isr_handler, (void *)self);
    }
  }

  // return the irq object
  return MP_OBJ_FROM_PTR(&machine_pin_irq_object[self->id]);
}

STATIC mp_obj_t machine_pin_irq_trigger(size_t n_args, const mp_obj_t *args) {
  machine_pin_irq_obj_t *self = args[0];
  uint32_t orig_trig = GPIO.pin[self->id].int_type;
  if (n_args == 2) {
    // set trigger
    gpio_set_intr_type(self->id, mp_obj_get_int(args[1]));
  }
  // return original trigger value
  return MP_OBJ_NEW_SMALL_INT(orig_trig);
}
