==> tetrafolium/micropython/ports/zephyr/machine_pin.c <==
#include <stdint.h>
#include <stdio.h>
#include <string.h>
#include <drivers/gpio.h>
#include <zephyr.h>
#include "lib/utils/mpirq.h"
#include "modmachine.h"
#include "py/gc.h"
#include "py/mphal.h"
#include "py/runtime.h"

STATIC mp_obj_t machine_pin_obj_init_helper(machine_pin_obj_t *self,
                                            size_t n_args,
                                            const mp_obj_t *pos_args,
                                            mp_map_t *kw_args) {
  enum { ARG_mode, ARG_pull, ARG_value };
  static const mp_arg_t allowed_args[] = {
      {MP_QSTR_mode, MP_ARG_REQUIRED | MP_ARG_INT},
      {MP_QSTR_pull, MP_ARG_OBJ, {.u_obj = mp_const_none}},
      {MP_QSTR_value, MP_ARG_KW_ONLY | MP_ARG_OBJ, {.u_obj = MP_OBJ_NULL}},
  };

  // parse args
  mp_arg_val_t args[MP_ARRAY_SIZE(allowed_args)];
  mp_arg_parse_all(n_args, pos_args, kw_args, MP_ARRAY_SIZE(allowed_args),
                   allowed_args, args);

  // get io mode
  uint mode = args[ARG_mode].u_int;

  // get pull mode
  uint pull = 0;
  if (args[ARG_pull].u_obj != mp_const_none) {
    pull = mp_obj_get_int(args[ARG_pull].u_obj);
  }

  // get initial value
  uint init = 0;
  if (args[ARG_value].u_obj != MP_OBJ_NULL) {
    init = mp_obj_is_true(args[ARG_value].u_obj) ? GPIO_OUTPUT_INIT_HIGH
                                                 : GPIO_OUTPUT_INIT_LOW;
  }

  int ret = gpio_pin_configure(self->port, self->pin, mode | pull | init);
  if (ret) {
    mp_raise_ValueError(MP_ERROR_TEXT("invalid pin"));
  }

  return mp_const_none;
}

STATIC mp_obj_t machine_pin_call(mp_obj_t self_in, size_t n_args, size_t n_kw,
                                 const mp_obj_t *args) {
  mp_arg_check_num(n_args, n_kw, 0, 1, false);
  machine_pin_obj_t *self = self_in;
  if (n_args == 0) {
    int pin_val = gpio_pin_get_raw(self->port, self->pin);
    return MP_OBJ_NEW_SMALL_INT(pin_val);
  } else {
    (void)gpio_pin_set_raw(self->port, self->pin, mp_obj_is_true(args[0]));
    return mp_const_none;
  }
}

STATIC mp_obj_t machine_pin_off(mp_obj_t self_in) {
  machine_pin_obj_t *self = self_in;
  (void)gpio_pin_set_raw(self->port, self->pin, 0);
  return mp_const_none;
}

STATIC mp_obj_t machine_pin_on(mp_obj_t self_in) {
  machine_pin_obj_t *self = self_in;
  (void)gpio_pin_set_raw(self->port, self->pin, 1);
  return mp_const_none;
}

STATIC mp_obj_t machine_pin_irq(size_t n_args, const mp_obj_t *pos_args,
                                mp_map_t *kw_args) {
  enum { ARG_handler, ARG_trigger, ARG_hard };
  static const mp_arg_t allowed_args[] = {
      {MP_QSTR_handler, MP_ARG_OBJ, {.u_rom_obj = MP_ROM_NONE}},
      {MP_QSTR_trigger, MP_ARG_INT, {.u_int = GPIO_INT_EDGE_BOTH}},
      {MP_QSTR_hard, MP_ARG_BOOL, {.u_bool = false}},
  };
  machine_pin_obj_t *self = MP_OBJ_TO_PTR(pos_args[0]);
  mp_arg_val_t args[MP_ARRAY_SIZE(allowed_args)];
  mp_arg_parse_all(n_args - 1, pos_args + 1, kw_args,
                   MP_ARRAY_SIZE(allowed_args), allowed_args, args);

  if (self->irq == NULL) {
    machine_pin_irq_obj_t *irq;
    for (irq = MP_STATE_PORT(machine_pin_irq_list); irq != NULL;
         irq = irq->next) {
      machine_pin_obj_t *irq_pin = MP_OBJ_TO_PTR(irq->base.parent);
      if (irq_pin->port == self->port && irq_pin->pin == self->pin) {
        break;
      }
    }
    if (irq == NULL) {
      irq = m_new_obj(machine_pin_irq_obj_t);
      mp_irq_init(&irq->base, &machine_pin_irq_methods, MP_OBJ_FROM_PTR(self));
      irq->next = MP_STATE_PORT(machine_pin_irq_list);
      gpio_init_callback(&irq->callback, gpio_callback_handler, BIT(self->pin));
      int ret = gpio_add_callback(self->port, &irq->callback);
      if (ret != 0) {
        mp_raise_OSError(-ret);
      }
      MP_STATE_PORT(machine_pin_irq_list) = irq;
    }
    self->irq = irq;
  }

  if (n_args > 1 || kw_args->used != 0) {
    // configure irq
    int ret =
        gpio_pin_interrupt_configure(self->port, self->pin, GPIO_INT_DISABLE);
    if (ret != 0) {
      mp_raise_OSError(-ret);
    }

    self->irq->base.handler = args[ARG_handler].u_obj;
    self->irq->base.ishard = args[ARG_hard].u_bool;

    if (args[ARG_handler].u_obj != mp_const_none) {
      ret = gpio_pin_interrupt_configure(self->port, self->pin,
                                         args[ARG_trigger].u_int);
      if (ret != 0) {
        mp_raise_OSError(-ret);
      }
    }
  }

  return MP_OBJ_FROM_PTR(self->irq);
}

STATIC mp_uint_t machine_pin_irq_trigger(mp_obj_t self_in,
                                         mp_uint_t new_trigger) {
  machine_pin_obj_t *self = MP_OBJ_TO_PTR(self_in);
  if (new_trigger == 0) {
    new_trigger = GPIO_INT_DISABLE;
  }
  int ret = gpio_pin_interrupt_configure(self->port, self->pin, new_trigger);
  if (ret != 0) {
    mp_raise_OSError(-ret);
  }
  return 0;
}
